--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@
   --destructive-foreground: hsl(0, 0%, 100%);
 
   /* Borders and inputs */
-  --border: hsl(0, 0%, 73%);
+  --border: hsla(0, 0%, 44%, 0.242);
   --input: hsl(240, 10%, 95%);
   --ring: hsl(220, 60%, 45%);
 
